# Kayak

db/: Cargo.toml
db/src/: config.rs  container.rs  context.rs  cycles.rs  lib.rs  master.rs  native.rs  sched.rs  service.rs  table.rs  tenant.rs
ext/aggregate/: Cargo.toml
ext/analysis/: Cargo.toml
ext/auth/: Cargo.toml
ext/bad/: Cargo.toml
ext/checksum/: Cargo.toml
ext/err/: Cargo.toml
ext/get/: Cargo.toml
ext/long/: Cargo.toml
ext/pushback/: Cargo.toml
ext/put/: Cargo.toml
ext/scan/: Cargo.toml
net/framework/: Cargo.toml
net/framework/src/: lib.rs
net/framework/src/allocators/: cache_aligned.rs
net/framework/src/config/: config_reader.rs  flag_reader.rs
net/framework/src/control/: sctp.rs  tcp.rs
net/framework/src/control/linux/: epoll.rs
net/framework/src/headers/: ip.rs  mac.rs  tcp.rs  udp.rs
net/framework/src/interface/: dpdk.rs  packet.rs
net/framework/src/interface/port/: mod.rs  phy_port.rs  virt_port.rs
net/framework/src/native/: libnuma.rs
net/framework/src/native/zcsi/: zcsi.rs
net/framework/src/operators/: act.rs  add_metadata.rs  add_metadata_mut.rs  composition_batch.rs  deparsed_batch.rs  filter_batch.rs  group_by.rs  iterator.rs  macros.rs  map_batch.rs  merge_batch.rs  mod.rs  packet_batch.rs  parsed_batch.rs  receive_batch.rs  reset_parse.rs  restore_header.rs  send_batch.rs  transform_batch.rs
net/framework/src/queues/: mpsc_mbuf_queue.rs
net/framework/src/scheduler/: context.rs  embedded_scheduler.rs  mod.rs  standalone_scheduler.rs
net/framework/src/shared_state/: directory.rs  mod.rs  shared_vec.rs
net/framework/src/state/: cp_mergeable.rs  dp_mergeable.rs  mergeable.rs
net/framework/src/state/reordered_buffer/: reordered_buffer.rs
net/framework/src/utils/: asm.rs  flow.rs
sandstorm/: Cargo.toml
splinter/: Cargo.toml
util/: Cargo.toml
util/src/: lib.rs  (+1 more)
(+45 files in other folders)
