[package]
name    = "db"
version = "0.1.0"
authors = ["Chinmay Kulkarni <chnm.kulkarni@gmail.com>",
           "Ryan Stutsman <stutsman@cs.utah.edu>"]
license = "MIT"

[lib]
name = "db"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "ext_bench"
path = "src/bin/ext_bench.rs"

[[bin]]
name = "table_bench"
path = "src/bin/table_bench.rs"

[[bin]]
name = "net_bench"
path = "src/bin/net_bench.rs"

[dependencies]
hashbrown    = "=0.1.8"
libc         = "0.2.69"
nix          = "=0.11.0"
log          = "=0.3.9"
rand         = "=0.4.6"
time         = "=0.1.43"
spin         = "=0.5.2"
bytes        = "=0.4.7"
env_logger   = "=0.3.5"
libloading   = "=0.3.0"
serde        = "=1.0.37"
serde_derive = "=1.0.37"
toml         = "=0.4.5"
bincode      = "=1.0.0"
rust-crypto  = "=0.2.36"
sandstorm    = {path = "../sandstorm"}
e2d2         = {path = "../net/framework"}
util         = {path = "../util"}

[features]
default = []
dispatch = []
execution = []
