[package]
name = "e2d2"
version = "0.2.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]
build = "build.rs"

[lib]
doctest = false

[dependencies]
libc = "0.2.69"
time = "=0.1.43"
getopts = "=0.2.21"
byteorder = "=1.4.3"
clippy = { version = "=0.0.302", optional = true }
fnv = "=1.0.7"
twox-hash = "=1.1.1"
regex = "=0.2.10"
lazy_static = "=1.4.0"
net2 = "=0.2.37"
nix = "=0.17.0"
rust-sctp = { git="https://github.com/netsys/rust-sctp", optional = true }
toml = "=0.4.5"
uuid = { version = "=0.8.2", features=["v4"] }
error-chain = "=0.11.0"
tokio-core = "=0.1.8"
futures = "=0.1.14"

[features]
default = []
performance = []
dev = ["clippy"]
packet_offset = []
sctp = ["rust-sctp"]

[build-dependencies]
bindgen = "=0.33.0"
